# m-scripts

./: .gitignore  AGENTS.md  Cargo.toml  README.md  register.sh
plugins/zellij-attention/: Cargo.toml
plugins/zellij-attention/src/: config.rs  lib.rs  main.rs  state.rs  tests.rs
raycast/: open-file-with-emacsclient.applescript  pdf_url_emacs.sh
shell/: alias.sh  config.sh  docker.sh  env.sh  install.sh  tools.sh  util.sh  zsh.sh
shell/config/: agent-guidelines.md  alacritty.toml  alacritty.yml  claude-attention.sh  claude-settings.json  ghostty.config  gitconfig  oh-my-opencode-slim.json  opencode-zellij-attention.js  opencode.json  tmux.conf  vimrc
shell/config/oh-my-opencode-slim/: fixer_append.md  oracle_append.md  orchestrator_append.md
shell/config/zellij/: config.kdl
skills/linkedin-sourcing/: DEBUG.md  SKILL.md
skills/linkedin-sourcing/scripts/: auth_bootstrap.py  bootstrap_project.py  browser_utils.py  check_blocked.sh  config_utils.py  connect_browser.sh  ensure_recruiter_project.py  excel_utils.py  extract_candidates.py  init_runtime.py  inmail_sender.py  phase_registry.py  phase_retry.py  profile_enricher.py  project_ref_utils.py  project_state.py  reachout_automation.py  reconcile_state.py  recruiter_page_utils.py  recruiter_url_utils.py  run_create_search.py  run_draft.py  run_enrich.py  run_extraction.py  run_send.py  (+6 more)
skills/xdev/: SKILL.md
src/: main.rs
src/lyftkube/: lk.rs  mod.rs
talon/: README.md  dictation.py  dictation.talon  edit.py  edit.talon  sleep.py  sleep.talon  wake.talon  zellij.py  zellij.talon
talon/apps/: ghostty.py
(+47 files in other folders)
