[package]
name = "zellij-attention"
version = "0.3.1"
edition = "2021"
license = "MIT"

[lib]
name = "zellij_attention"
path = "src/lib.rs"

[[bin]]
name = "zellij-attention"
path = "src/main.rs"
test = false

[dependencies]
zellij-tile = "0.43.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
